fix style inconsistencies on firefox

--- a/src/components/Checkbox/Checkbox.css
+++ b/src/components/Checkbox/Checkbox.css
@@ -7,6 +7,7 @@
 
 .checkbox:not(:checked) + label, .checkbox:checked + label {
     position: relative;
+    display: block;
     cursor: pointer;
 }
 
